final tests implemented